<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/preQuestions_Layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.PreQuestionsFragment"
    android:paddingTop="@dimen/_10sdp"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingStart="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_textContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numberQuestionEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/how_many_questions"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="@dimen/second_font"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numEdit_textContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/countdownEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/how_many_countdown"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="@dimen/second_font"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_questions"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_textContainer" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/practicalChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/practical_age_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/practical_formations_age"
            app:chipBackgroundColor="@android:color/white"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="2dp" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formations_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/practicalChipGroup" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/formationChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/formation_ageChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_text"
            app:chipBackgroundColor="@android:color/white"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/formation_authorChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_text"
            app:chipBackgroundColor="@android:color/white"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/formation_localityChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locality"
            app:chipBackgroundColor="@android:color/white"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/formation_fossilChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fossil_text"
            app:chipBackgroundColor="@android:color/white"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/formation_diachronicChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diachronic"
            app:chipBackgroundColor="@android:color/white"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/formation_lithologyChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lithology_text"
            app:chipBackgroundColor="@android:color/white"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="2dp" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lectures_range"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formationChipGroup" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rangeSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:values="@array/initial_slider_value" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8sdp"
        android:text="@string/start"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rangeSlider" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />
</androidx.constraintlayout.widget.ConstraintLayout>