<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.hussienfahmy.geologyofegyptformations.ui.formations.FormationDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
        tools:context=".ui.formations.FormationDetailsFragment"
        android:padding="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_font"
                android:textStyle="bold"
                android:text="@{viewModel.formation.name}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Matulla" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/economic_importance"
                android:text="@{@string/economic_importance(viewModel.formation.economicImportance)}"
                android:textSize="@dimen/second_font"
                android:layout_marginTop="@dimen/margin_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8sdp"
                tools:text="@string/lithology"
                android:text="@{@string/lithology(viewModel.formation.lithology)}"
                android:textSize="@dimen/second_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8sdp"
                tools:text="@string/locations"
                android:text="@{@string/locations(viewModel.formation.locations)}"
                android:textSize="@dimen/second_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8sdp"
                tools:text="@string/thickness"
                android:text="@{@string/thickness(viewModel.formation.thickness)}"
                android:textSize="@dimen/second_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8sdp"
                tools:text="@string/overlies"
                android:text="@{@string/overlies(viewModel.formation.overlies)}"
                android:textSize="@dimen/second_font"
                android:background="?selectableItemBackground"
                android:onClick="@{() -> viewModel.goToFormation(viewModel.formation.overlies)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8sdp"
                tools:text="@string/underlies"
                android:text="@{@string/underlies(viewModel.formation.underlies)}"
                android:textSize="@dimen/second_font"
                android:onClick="@{() -> viewModel.goToFormation(viewModel.formation.underlies)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8sdp"
                tools:text="@string/fossils"
                android:text="@{@string/fossils(viewModel.formation.fossils)}"
                android:textSize="@dimen/second_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/age"
                android:text="@{@string/age(viewModel.formation.age)}"
                android:textSize="@dimen/second_font"
                android:layout_marginTop="@dimen/margin_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/author"
                android:text="@{@string/author(viewModel.formation.author)}"
                android:textSize="@dimen/second_font"
                android:layout_marginTop="@dimen/margin_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/succession(viewModel.formation.succession)}"
                tools:text="@string/succession"
                android:layout_marginTop="@dimen/margin_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/lecture"
                app:layout_constraintBottom_toTopOf="@+id/textView15"
                app:layout_constraintEnd_toStartOf="@+id/lecture" />

            <TextView
                android:id="@+id/lecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/textView15"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="5" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="@dimen/_3sdp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>